# viking

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
doc/: conf.py  index.rst  tutorial_altproj.rst  viking_linalg.rst  viking_sampling.rst  viking_vi.rst
doc/_static/: custom.css
examples/: README.rst  bo.py  mnist.py  sinusoid.py  two_moons.py
kivi/: linalg.py  sampling.py  vi.py
src/kivi/: cg.py  vi.py
src/kivi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/viking/: cg.py  linalg.py  sampling.py  vi.py
tests/: test_examples.py  test_linalg.py  test_vi.py
