[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kivi"
version = "0.0.1"
authors = [
    {name="KIVI authors"}
]
description = "Kernel-Image Variational Inference"
readme = "README.md"
requires-python=">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "equinox>=0.12.1",
    "jax>=0.5.3",
    "jaxopt",
    "lpips_j",
    "matplotlib",
    "optax>=0.1.9",
    "pre-commit",
    "pytest",
    "pytest_cases",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["kivi*"]  # package names should match these glob patterns (["*"] by default)

[tool.setuptools_scm]
version_file = "src/kivi/_version.py"

[tool.ruff.lint]
# Enable import-sorting
extend-select = ["I"]
# Ignore E731 (Do not assign a `lambda` expression, use a `def`)
ignore = ["E731"]
